--- a/Components/B1_Tabs/Tabs.module.scss
+++ b/Components/B1_Tabs/Tabs.module.scss
@@ -2,10 +2,10 @@
 
 .tabs {
   position: relative;
-  padding-top: 70px;
+  //padding-top: 70px;
 
   @include desktop {
-    padding-top: 60px;
+    //padding-top: 60px;
   }
 
   .tabsImg {
